--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,27 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>DevOpsDive</title>
-  <meta name="description" content="SMy path to Dream job">
+  <meta name="description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+  <!-- Additional Favicon for different devices (Optional) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="img/site.webmanifest">
+  <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="DevOpsDive">
-  <meta itemprop="description" content="My path to Dream job">
+  <meta itemprop="description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today">
   <meta itemprop="image"
     content="https://devopsdive.com">
 
@@ -21,14 +34,14 @@
   <meta property="og:url" content="https://devopsdive.com">
   <meta property="og:type" content="website">
   <meta property="og:title" content="DevOpsDive">
-  <meta property="og:description" content="My path to Dream job">
+  <meta property="og:description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today">
   <meta property="og:image"
     content="https://devopsdive.com">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="DevOpsDive">
-  <meta name="twitter:description" content="My path to Dream job">
+  <meta name="twitter:description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today">
   <meta name="twitter:image"
     content="https://devopsdive.com">
 </head>
