--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>DevOps Dive</title>
+  <title>jenkins test</title>
   <meta name="description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today">
 
   <!-- Favicon -->
