add projects description

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="icon" href="img/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="manifest" href="img/manifest.json" />
   <title>DevOpsDive</title>
   <meta name="description" content="DevOpsDive: Engineering Tomorrow's Solutions, Today">
 
